--- a/ANGClient/src/app/authentication/login/login.component.html
+++ b/ANGClient/src/app/authentication/login/login.component.html
@@ -1,4 +1,5 @@
-<form [formGroup]="formLogin" novalidate>
+<form [formGroup]="formLogin">
+  <span class="error__message">{{ error }}</span>
   <label for="email">email</label>
   <input name="email" type="text" formControlName="email" #email />
   <label for="password">password</label>
